Hide overflowing dots.

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -74,6 +74,7 @@ $shadows-medium: multiple-box-shadow(200);
 $shadows-big: multiple-box-shadow(100);
 
 .parallax {
+  overflow: hidden;
   #stars1 {
     width: 2px;
     height: 2px;
