--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -1,11 +1,23 @@
 .header {
-  margin-bottom: 1.5rem;
+  margin-bottom: 0;
 }
 
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-100px);
+    transform: translateX(0px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(0px);
   }
 
   100% {
@@ -17,11 +29,22 @@
 .header-name {
   text-shadow: none;
   background-image: none;
-  animation: moveInLeft 1s ease-out 0.5s;
-  animation-fill-mode: backwards;
 }
 
 .header-name-h1 {
   display: inline;
   font-size: 30px;
+  animation: moveInLeft 1s ease-out;
+  /*animation-fill-mode: backwards;*/
+}
+
+.list-links {
+  float: right;
+  animation: moveInRight 1s ease-out;
+  /*animation-fill-mode: backwards;*/
+}
+
+.list-link {
+  text-shadow: "none";
+  margin: "15px";
 }
