Add google fonts, images broken in mobile.

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -10,9 +10,10 @@ html {
 
 .content {
   margin: 3rem auto;
-  maxwidth: 650;
+  /*max-width: 650;*/
   padding: 0 2rem;
 }
+
 /*
 body {
   font-family: "Lato", sans-serif;
@@ -20,7 +21,7 @@ body {
   font-size: 16px;
   line-height: 1.7;
   color: #777;
-  padding: 30px;
+  // padding: 30px;
 }
 */
 
