--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -15,7 +15,8 @@ html {
 }
 
 body {
-  font-family: "Lato", sans-serif;
+  /* font-family: "Lato", sans-serif;*/
+  font-family: "Dancing Script", cursive;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.7;
