--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -35,6 +35,7 @@
 .header-name-h1 {
   display: inline;
   font-size: 30px;
+  font-weight: 700;
   animation: moveInLeft 1s ease-out;
   /*animation-fill-mode: backwards;*/
 }
