Remove links for now.

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -33,10 +33,10 @@
 }
 
 .header-name-h1 {
-  display: inline;
-  font-size: 30px;
+  font-size: 40px;
   font-weight: 700;
   animation: moveInLeft 1s ease-out;
+  text-align: center;
   /*animation-fill-mode: backwards;*/
 }
 
