--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,6 +1,7 @@
 .header {
-  position: relative;
+  position: absolute;
   height: 100vh;
+  width: 100vw;
   background-image: url("https://source.unsplash.com/aL7SA1ASVdQ/1600x900");
   background-size: cover;
   background-position: top;
