--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -2,6 +2,7 @@
   position: absolute;
   width: 100%;
   z-index: 999;
+  padding: 2rem 0;
 }
 
 .nav__items {
@@ -30,7 +31,6 @@
 
 .header-icons {
   width: auto;
-  height: 100px;
   margin-right: 1em;
   align-items: center;
   justify-content: center;
