--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -2,9 +2,9 @@
   position: absolute;
   height: 100vh;
   width: 100vw;
-  background-image: url("https://source.unsplash.com/aL7SA1ASVdQ/1600x900");
-  background-size: cover;
-  background-position: top;
+  /*background-image: url("https://source.unsplash.com/aL7SA1ASVdQ/1600x900");*/
+  /*background-size: cover;*/
+  /*background-position: top;*/
 }
 
 .header__text-box {
@@ -16,7 +16,7 @@
 }
 
 .heading-primary {
-  color: #fff;
+  color: #aaa;
   text-transform: uppercase;
   backface-visibility: hidden;
   margin-bottom: 6rem;
