--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -5,6 +5,42 @@
   padding: 2rem 0;
 }
 
+.nav-link:hover {
+  text-decoration: none !important;
+}
+
+.nav-link {
+  position: relative;
+}
+
+.nav-link::after {
+  content: "";
+  opacity: 0;
+  -webkit-transition: all 0s;
+  transition: all 0s;
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  right: 0;
+  height: 0.2em;
+  //border: 3px solid black;
+  background-color: black;
+  border-radius: 1rem;
+  z-index: 0;
+}
+
+.nav-link:hover::after {
+  opacity: 1;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.nav-link[aria-current="page"]::after {
+  opacity: 1;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
 .nav__items {
   display: flex;
   color: #fff;
