--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -16,8 +16,8 @@
 .nav-link::after {
   content: "";
   opacity: 0;
-  -webkit-transition: all 0s;
-  transition: all 0s;
+  -webkit-transition: opacity 0.1s;
+  transition: opacity 0.1s;
   position: absolute;
   bottom: -4px;
   left: 0;
@@ -31,14 +31,12 @@
 
 .nav-link:hover::after {
   opacity: 1;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: opacity 1s;
+  transition: opacity 1s;
 }
 
 .nav-link[aria-current="page"]::after {
   opacity: 1;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
 }
 
 .nav__items {
